# riyo-browser

./: .gitignore  LICENSE  NOTES.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  BookmarksBar.tsx  BookmarksPanel.tsx  DownloadsPanel.tsx  DownloadsPopover.tsx  Favicon.tsx  HistoryPanel.tsx  LocationPermission.tsx  MediaPlayer.tsx  MenuPopup.tsx  NewTabPage.tsx  OverflowMenu.tsx  PanelShell.tsx  SettingsPanel.tsx  backgrounds.ts  bookmarks.ts  format.ts  history.ts  ipc.ts  main.tsx  newtabData.ts  settings.ts  styles.css  tabs.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: browser.rs  downloads.rs  lib.rs  main.rs  net.rs  permissions.rs
